Fixed WS-17 Fixes #529 Paginator in Admin Panel not properly aligning on tabs

--- a/templates/admin/css/admin.css
+++ b/templates/admin/css/admin.css
@@ -987,3 +987,21 @@ color:#111;
     font-size: 12px;
 
 }
+
+.paginator {
+    /*table_base rounded {5px top transparent}*/
+    font-size: 13px;
+    position: absolute;
+    left: -400px;
+    top: 531px;
+    padding:5px 0;
+    position:relative;
+    word-spacing: 15px;
+    z-index: 1000;
+    color: #fff;
+    text-shadow: 0px;
+}
+.paginator .arrow { padding-left: 5px; padding-right: 5px; color: #ffffff; }
+.paginator .break { padding-left: 5px; padding-right: 5px; }
+.paginator .selected { padding-left: 5px; padding-right: 5px; }
+.paginator .page { padding-left: 5px; padding-right: 5px; }
